--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/style.css">
     <title>gifOS</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="nav-container">
+            <div class="logo">
+                <img src="./svg/logo-desktop.svg" alt="">
+            </div>
+            <div class="list">
+                <ul>
+                    <li>MODO NOCTURNO</li>
+                    <li>FAVORITOS</li>
+                    <li>MIS GIFOS</li>
+                </ul>
+            </div>
+            <div class="buttonCrearGifo">
+                <img src="./svg/button-crear-gifo.svg" alt="">
+            </div>
+        </div>
+    </nav>
+    <header>
+        <h2>Inspírate, busca, guarda, y crea los mejores <span>GIFOS</span></h2>
+        <img src="./svg/ilustra_header.svg" alt="">
+        <div class="searchInput">
+            <input type="search" id="search" placeholder="Busca GIFOS y más" autocomplete="off">
+            <button id="searchButton"><img src="./svg/icon-search.svg" alt=""></button>
+        </div>
+        <p>Trending</p>
+    </header>
+    <script src="script.js"></script>
 </body>
 </html>
