update routes and favorite windows

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         <img src="./assets/icon-favoritos.svg" alt="Favoritos">
         <h2 class="favoritos-h2" id="favoritos-h2">Favoritos</h2>
         <div class="results-gifos-container"> 
-
             <div class="results-gifos-box">
                     <img src="./test/1.jpg" alt="">
                     <div class="wrapper"></div>
@@ -48,71 +47,6 @@
                         <p class="user ">User</p>
                         <p class="title ">Titulo</p>
                     </div>
-            </div>
-            <div class="results-gifos-box">
-                    <img src="./test/2.png" alt="">
-                    <div class="wrapper"></div>
-                    <div class="gifos-box-buttons display">
-                        <div class="gifos-box-button1"></div>
-                        <div class="gifos-box-button2"></div>
-                        <div class="gifos-box-button3"></div>
-                    </div>
-                    <div class="gifos-box-text display">
-                        <p class="user ">User</p>
-                        <p class="title ">Titulo</p>
-                    </div>
-            </div>
-            <div class="results-gifos-box">
-                    <img src="./test/3.jpg" alt="">
-                    <div class="wrapper"></div>
-                    <div class="gifos-box-buttons display">
-                        <div class="gifos-box-button1"></div>
-                        <div class="gifos-box-button2"></div>
-                        <div class="gifos-box-button3"></div>
-                    </div>
-                    <div class="gifos-box-text display">
-                        <p class="user">User</p>
-                        <p class="title">Titulo</p>
-                    </div>
-            </div>
-            <div class="results-gifos-box">
-                <img src="./test/3.jpg" alt="">
-                <div class="wrapper"></div>
-                <div class="gifos-box-buttons display">
-                    <div class="gifos-box-button1"></div>
-                    <div class="gifos-box-button2"></div>
-                    <div class="gifos-box-button3"></div>
-                </div>
-                <div class="gifos-box-text display">
-                    <p class="user">User</p>
-                    <p class="title">Titulo</p>
-                </div>
-            </div>
-            <div class="results-gifos-box">
-                <img src="./test/3.jpg" alt="">
-                <div class="wrapper"></div>
-                <div class="gifos-box-buttons display">
-                    <div class="gifos-box-button1"></div>
-                    <div class="gifos-box-button2"></div>
-                    <div class="gifos-box-button3"></div>
-                </div>
-                <div class="gifos-box-text display">
-                    <p class="user">User</p>
-                    <p class="title">Titulo</p>
-                </div>
-            </div>
-            <div class="results-gifos-box">
-                <img src="./test/3.jpg" alt="">
-                <div class="wrapper"></div>
-                <div class="gifos-box-buttons display">
-                    <div class="gifos-box-button1"></div>
-                    <div class="gifos-box-button2"></div>
-                    <div class="gifos-box-button3"></div>
-                </div>
-                <div class="gifos-box-text display">
-                    <p class="user">User</p>
-                    <p class="title">Titulo</p>
-                </div>
             </div>
         </div>
         <button class="results-gifos-button" id="favoritos-vermas"></button>
@@ -304,7 +238,7 @@
     </div>
 
     <div id="trending-text" class="trending-text">
-        <p class="trending-text-p">Trending:</p>
+        <p class="trending-text-p" id="trending-text-p">Trending:</p>
         <p class="trending-text-a" id="trending-text-a"></p>
     </div>
 
@@ -415,7 +349,7 @@
     
     <script src="./modules/trendingText.js" type="module"></script>
     <script src="./modules/routes.js" type="module"></script>
-    <script src="./modules/resultados.js" type="module"></script>
+    <script src="./modules/verMas.js" type="module"></script>
     <script src="./modules/input.js" type="module"></script>
     <script src="./modules/darkmode.js" type="module"></script>
     <script src="index.js" type="module"></script>
